# port-api

./: .gitignore  .pdm-python  Dockerfile  Makefile  README.md  configurations.json  eslint.config.mjs  generate_configs.js  go.mod  go.sum  package.json  pnpm-lock.yaml  pyproject.toml  renovate.json
.github/: codeql-analysis.yml  docs.yml  generate-clients-and-tests.yml  publish.yml  renovate-config.yml
.github/workflows/: ci.yml
.plandex/: project.json
docs/: conf.py  contributing.rst  index.rst  usage.rst
docs/api/: reference.rst
docs/stylesheets/: extra.css
languages/: bash.yaml  go.yaml  java.yaml  javascript.yaml  php.yaml  python.yaml  r.yaml  ruby.yaml  rust.yaml  typescript-node.yaml
languages/shared/: common.yaml
scripts/: backport_openapi_31_to_30.go  backport_openapi_31_to_30.py  generateClients.js  generateGitIgnore.js  generateTests.js  generate_openapi_30_from_31.go
scripts/config/: languages.js
scripts/scripts/: backport_openapi_31_to_30.py
tests/: e2e.test.js
